add authentication for member and styist

--- a/package.json
+++ b/package.json
@@ -15,48 +15,50 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.42.1",
-		"@sveltejs/adapter-auto": "^3.1.1",
-		"@sveltejs/kit": "^2.5.4",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/eslint": "^8.56.0",
-		"@types/node": "^20.11.27",
+		"@playwright/test": "^1.43.1",
+		"@sveltejs/adapter-auto": "^3.2.0",
+		"@sveltejs/kit": "^2.5.6",
+		"@sveltejs/vite-plugin-svelte": "^3.1.0",
+		"@types/eslint": "^8.56.9",
+		"@types/node": "^20.12.7",
 		"@types/uuid": "^9.0.8",
-		"@typescript-eslint/eslint-plugin": "^6.0.0-alpha.58",
-		"@typescript-eslint/parser": "^6.0.0-alpha.58",
-		"autoprefixer": "^10.4.18",
-		"eslint": "^8.56.0",
+		"@typescript-eslint/eslint-plugin": "^6.21.0",
+		"@typescript-eslint/parser": "^6.21.0",
+		"autoprefixer": "^10.4.19",
+		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.35.1",
+		"eslint-plugin-svelte": "^2.37.0",
 		"lucia": "^3.1.1",
-		"postcss": "^8.4.35",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"prisma": "^5.11.0",
-		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.4.1",
+		"postcss": "^8.4.38",
+		"prettier": "^3.2.5",
+		"prettier-plugin-svelte": "^3.2.3",
+		"prisma": "^5.12.1",
+		"svelte": "^4.2.15",
+		"svelte-check": "^3.6.9",
+		"tailwindcss": "^3.4.3",
 		"ts-node": "^10.9.2",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.3",
-		"vitest": "^1.2.0"
+		"tslib": "^2.6.2",
+		"typescript": "^5.4.5",
+		"vite": "^5.2.9",
+		"vitest": "^1.5.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"@lucia-auth/adapter-prisma": "^4.0.1",
 		"@prisma/client": "5.11.0",
-		"bits-ui": "^0.19.5",
+		"@types/jsonwebtoken": "^9.0.6",
+		"bits-ui": "^0.19.7",
 		"clsx": "^2.1.0",
 		"cmdk-sv": "^0.0.16",
 		"formsnap": "^0.5.1",
-		"oslo": "^1.1.3",
-		"svelte-radix": "^1.0.3",
-		"svelte-sonner": "^0.3.19",
-		"sveltekit-superforms": "^2.11.0",
-		"tailwind-merge": "^2.2.1",
-		"tailwind-variants": "^0.2.0",
-		"ts-input-validator": "^1.0.2",
+		"jsonwebtoken": "^9.0.2",
+		"oslo": "^1.2.0",
+		"svelte-radix": "^1.1.0",
+		"svelte-sonner": "^0.3.22",
+		"sveltekit-superforms": "^2.12.5",
+		"tailwind-merge": "^2.2.2",
+		"tailwind-variants": "^0.2.1",
+		"ts-input-validator": "^1.0.3",
 		"uuid": "^9.0.1",
 		"zod": "^3.22.4"
 	},
