--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@castlenine/svelte-qrcode": "^2.2.0",
 		"@playwright/test": "^1.43.1",
 		"@sveltejs/adapter-auto": "^3.2.0",
 		"@sveltejs/kit": "^2.5.7",
@@ -28,6 +29,7 @@
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.38.0",
+		"html5-qrcode": "^2.3.8",
 		"lucia": "^3.2.0",
 		"postcss": "^8.4.38",
 		"prettier": "^3.2.5",
